--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- About Card -->
         <div class="col-md-3 col-sm-6">
           <div class="card h-100 shadow-sm">
-            <img src="Images/About/about.jpg" class="card-img-top" alt="About Image">
+            <img src="https://images.unsplash.com/photo-1762661122540-10645eafc95c?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687" class="card-img-top" alt="About Image">
             <div class="card-body text-center">
               <h5 class="card-title">About Us</h5>
               <p class="card-text">Learn more about Shiv Kamevara’s journey as a storyteller.</p>
