--- a/index.html
+++ b/index.html
@@ -1,115 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shiv Kamevara – Author Website</title>
 
-  <!-- Bootstrap CSS (no JS needed) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shiv Kamevara – Author Website</title>
+
+
+    <!-- Bootstrap CSS (no JS needed) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="index">
 
-  <!-- Navbar -->
-  <header class="bg-dark py-3">
-    <div class="container d-flex flex-wrap justify-content-between align-items-center">
-      <a href="index.html" class="navbar-brand text-light fw-bold">Shiv Kamevara</a>
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a href="index.html" class="nav-link text-light active">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link text-light">About</a></li>
-          <li class="nav-item"><a href="privacy.html" class="nav-link text-light">Privacy Policy</a></li>
-          <li class="nav-item"><a href="terms.html" class="nav-link text-light">Terms</a></li>
-          <li class="nav-item"><a href="disclaimer.html" class="nav-link text-light">Disclaimer</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <!-- Navbar -->
+    <header class="bg-dark py-3">
+        <div class="container d-flex flex-wrap justify-content-between align-items-center">
+            <a href="index.html" class="navbar-brand text-light fw-bold">Shiv Kamevara</a>
+            <nav>
+                <ul class="nav">
+                    <li class="nav-item"><a href="index.html" class="nav-link text-light active">Home</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link text-light">About</a></li>
+                    <li class="nav-item"><a href="privacy.html" class="nav-link text-light">Privacy Policy</a></li>
+                    <li class="nav-item"><a href="terms.html" class="nav-link text-light">Terms</a></li>
+                    <li class="nav-item"><a href="disclaimer.html" class="nav-link text-light">Disclaimer</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <!-- Hero Section -->
-  <section class="hero text-center text-light d-flex align-items-center">
-    <div class="container">
-      <h1 class="fw-bold">Welcome to Shiv Kamevara’s Author Website</h1>
-      <p class="lead">Dive into stories, worlds, and imagination.</p>
-      <a href="about.html" class="btn btn-primary mt-3">Learn More</a>
-    </div>
-  </section>
+    <!-- Hero Section -->
+    <section class="hero text-center text-light d-flex align-items-center">
+        <div class="container">
+            <h1 class="fw-bold">Welcome to Shiv Kamevara’s Author Website</h1>
+            <p class="lead">Dive into stories, worlds, and imagination.</p>
+            <a href="about.html" class="btn btn-primary mt-3">Learn More</a>
+        </div>
+    </section>
 
-  <!-- About Preview -->
-  <section class="py-5 text-center">
-    <div class="container">
-      <b>
-      <h2>About This Website</h2>
+    <!-- About Preview -->
+    <section class="py-5 text-center">
+        <div class="container">
+            <b>
+      <h2 class="divy">About This Website</h2>
       <p class="mt-3">
         This website showcases the original creative works of <strong>Shiv Kamevara</strong> — an independent fantasy author and storyteller.
         Designed simply using HTML, CSS, and Bootstrap to remain clean and responsive.
       </p>
       </b>
-    </div>
-  </section>
-
-  <!-- Card Section -->
-  <section class="py-5 bg-light">
-    <div class="container">
-      <div class="row g-4">
-
-        <!-- About Card -->
-        <div class="col-md-3 col-sm-6">
-          <div class="card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1762661122540-10645eafc95c?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687" class="card-img-top" alt="About Image">
-            <div class="card-body text-center">
-              <h5 class="card-title">About Us</h5>
-              <p class="card-text">Learn more about Shiv Kamevara’s journey as a storyteller.</p>
-              <a href="about.html" class="btn btn-outline-primary">Read More</a>
-            </div>
-          </div>
         </div>
+    </section>
 
-        <!-- Privacy Policy Card -->
-        <div class="col-md-3 col-sm-6">
-          <div class="card h-100 shadow-sm">
-            <img src="Images/Privacy/privacy.jpg" class="card-img-top" alt="Privacy Policy Image">
-            <div class="card-body text-center">
-              <h5 class="card-title">Privacy Policy</h5>
-              <p class="card-text">Learn how your information is collected and used.</p>
-              <a href="privacy.html" class="btn btn-outline-primary">View</a>
+    <!-- Card Section -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row g-4">
+
+                <!-- About Card -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 shadow-sm">
+                        <img src="./img/2400x1600_divider-09.webp" class="card-img-top" alt="About Image">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">About Us</h5>
+                            <p class="card-text">Learn more about Shiv Kamevara’s journey as a storyteller.</p>
+                            <a href="about.html" class="btn btn-outline-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Privacy Policy Card -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 shadow-sm">
+                        <img src="./img/1920x1080_divider-02.webp" class="card-img-top" alt="Privacy Policy Image">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Privacy Policy</h5>
+                            <p class="card-text">Learn how your information is collected and used.</p>
+                            <a href="privacy.html" class="btn btn-outline-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Terms Card -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 shadow-sm">
+                        <img src="./img/1920x1080_divider-03.webp" class="card-img-top" alt="Terms Image">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Terms & Conditions</h5>
+                            <p class="card-text">Understand your rights and responsibilities on this website.</p>
+                            <a href="terms.html" class="btn btn-outline-primary">View</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Disclaimer Card -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 shadow-sm">
+                        <img src="./img/2400x1600_divider-08.webp" class="card-img-top" alt="Disclaimer Image">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Disclaimer</h5>
+                            <p class="card-text">Important legal information and content disclaimer.</p>
+                            <a href="disclaimer.html" class="btn btn-outline-primary">Read</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-          </div>
         </div>
+    </section>
 
-        <!-- Terms Card -->
-        <div class="col-md-3 col-sm-6">
-          <div class="card h-100 shadow-sm">
-            <img src="Images/Terms and conditions/T&C.jpg" class="card-img-top" alt="Terms Image">
-            <div class="card-body text-center">
-              <h5 class="card-title">Terms & Conditions</h5>
-              <p class="card-text">Understand your rights and responsibilities on this website.</p>
-              <a href="terms.html" class="btn btn-outline-primary">View</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Disclaimer Card -->
-        <div class="col-md-3 col-sm-6">
-          <div class="card h-100 shadow-sm">
-            <img src="Images/Disclaimer/disclaimer.jpg" class="card-img-top" alt="Disclaimer Image">
-            <div class="card-body text-center">
-              <h5 class="card-title">Disclaimer</h5>
-              <p class="card-text">Important legal information and content disclaimer.</p>
-              <a href="disclaimer.html" class="btn btn-outline-primary">Read</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-dark text-light text-center py-3">
-    <p class="mb-0">© 2025 Shiv Kamevara | Fantasy Author & Storyteller</p>
-  </footer>
+    <!-- Footer -->
+    <footer class="bg-dark text-light text-center py-3">
+        <p class="mb-0">© 2025 Shiv Kamevara | Fantasy Author & Storyteller</p>
+    </footer>
 
 </body>
+
 </html>
